--- a/lib/countdown_web/templates/layout/app.html.eex
+++ b/lib/countdown_web/templates/layout/app.html.eex
@@ -9,6 +9,9 @@
 
     <title>Hello Countdown!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.css" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.min.js"></script>
   </head>
 
   <body>
@@ -16,10 +19,17 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
-            <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+            <%= if @current_user do %>
+              <li><a href="/">Home</a></li>
+              <li><a href="/events">Events</a></li>
+             <li class="active"><a href="/logout">Logout</a></li>
+             <% else %>
+               <li><a href="/">Home</a></li>
+                 <li><a href="/auth/auth0">Login</a></li>
+             <% end %>
           </ul>
         </nav>
-        <span class="logo"></span>
+        <span class="auth0-logo"></span>
       </header>
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
